@@ -11,6 +11,7 @@
    See the COPYING file for more details.
 */
 
+#include "wesconfig.h"
 #include "global.hpp"
 
 #include "font.hpp"
@@ -48,7 +49,7 @@ TTF_Font* open_font(const std::string& fname, int size)
 	std::string name;
 
 	LOG_FT << "Opening font '" << fname << "' ...\n";
-#if 1 || !defined(USE_ZIPIOS)
+#ifndef USE_ZIPIOS
 	if(game_config::path.empty() == false) {
 		name = game_config::path + "/fonts/" + fname;
 		LOG_FT << "Trying file '" << name << "' ...\n";
@@ -75,12 +76,12 @@ TTF_Font* open_font(const std::string& fname, int size)
 
 	TTF_Font* font = TTF_OpenFont(name.c_str(),size);
 #else
-	std::string s = read_file("fonts/" + fname);
-	if (s.empty()) {
+	std::string *s = new std::string(read_file("fonts/" + fname));
+	if (s->empty()) {
 		ERR_FT << "Failed opening font file '" << fname << "'\n";
 		return NULL;
 	}
-	SDL_RWops* ops = SDL_RWFromMem((void*)s.c_str(), s.size());
+	SDL_RWops* ops = SDL_RWFromMem((void*)s->c_str(), s->size());
 	TTF_Font* font = TTF_OpenFontRW(ops, 0, size);
 #endif
 	if(font == NULL) {
